#0003 1. Мелкий фикс 2. Подключил jest и enzyme 3. Написал простенький тест на reducers

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "browser": true,
         "es6": true,
-        "node": true
+        "node": true,
+        "jest": true
     },
     "extends": "airbnb",
     "globals": {
@@ -19,7 +20,8 @@
     },
     "plugins": [
         "react",
-        "flowtype"
+        "flowtype",
+        "jest"
     ],
     "rules": {
         "indent": ["error", 4],
