--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start": "webpack-dev-server --mode development",
     "build": "NODE_ENV=production webpack --mode production",
     "dev": "webpack --mode development",
-    "test": "",
     "flow:status": "flow status --quiet",
     "flow:install": "flow-typed install",
     "flow:update": "flow-typed update",
     "flow:coverage": "flow coverage",
-    "flow": "flow"
+    "flow": "flow",
+    "test": "jest --no-cache",
+    "test:coverage": "jest --no-cache --coverage",
+    "test:watch": "jest --no-cache --watch"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -23,21 +25,27 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.6.1",
-    "babel-loader": "^8.0.6",
     "babel-eslint": "^10.0.2",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.1.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^17.1.1",
+    "eslint-plugin-flowtype": "^3.12.1",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.14.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-flowtype": "^3.12.1",
     "file-loader": "^4.1.0",
     "flow-bin": "^0.104.0",
     "flow-typed": "^2.6.0",
     "html-webpack-harddisk-plugin": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.8.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
